refactor api format, add backup dir to server info loading
