# docs/swagger.json
@@ -48,6 +48,12 @@
           },
           {
             "type": "boolean",
+            "description": "WithBackupDirInfo 指定是否加载用户备份文件夹的信息。",
+            "name": "with_backup_dir_info",
+            "in": "query"
+          },
+          {
+            "type": "boolean",
             "description": "WithCPUMemProcessesUsage 指定是否加载CPU，内存，进程的使用信息。",
             "name": "with_cmp_usages",
             "in": "query"
@@ -287,6 +293,12 @@
             "type": "boolean",
             "description": "WithAccounts 加载账户信息的参数，为nil则不加载",
             "name": "with_accounts",
+            "in": "query"
+          },
+          {
+            "type": "boolean",
+            "description": "WithBackupDirInfo 指定是否加载用户备份文件夹的信息。",
+            "name": "with_backup_dir_info",
             "in": "query"
           },
           {
@@ -572,9 +584,12 @@
         }
       }
     },
-    "internal_models.Account": {
+    "internal_models.ServerAccount": {
       "type": "object",
       "properties": {
+        "backup_dir_info": {
+          "$ref": "#/definitions/internal_models.ServerAccountBackupDirInfo"
+        },
         "created_at": {
           "type": "string"
         },
@@ -610,6 +625,26 @@
         }
       }
     },
+    "internal_models.ServerAccountBackupDirInfo": {
+      "type": "object",
+      "properties": {
+        "backup_dir": {
+          "type": "string"
+        },
+        "dir_exists": {
+          "type": "boolean"
+        },
+        "failed_info": {
+          "$ref": "#/definitions/internal_models.ServerInfoLoadingFailedInfo"
+        },
+        "output": {
+          "type": "string"
+        },
+        "path_exists": {
+          "type": "boolean"
+        }
+      }
+    },
     "internal_models.ServerAccountBackupDirResponse": {
       "type": "object",
       "properties": {
@@ -618,6 +653,12 @@
         },
         "dir_exists": {
           "type": "boolean"
+        },
+        "failed_info": {
+          "$ref": "#/definitions/internal_models.ServerInfoLoadingFailedInfo"
+        },
+        "output": {
+          "type": "string"
         },
         "path_exists": {
           "type": "boolean"
@@ -642,12 +683,7 @@
       }
     },
     "internal_models.ServerAccountCreateResponse": {
-      "type": "object",
-      "properties": {
-        "backup_dir": {
-          "type": "string"
-        }
-      }
+      "type": "object"
     },
     "internal_models.ServerAccountDeleteRequest": {
       "type": "object",
@@ -667,7 +703,12 @@
       }
     },
     "internal_models.ServerAccountDeleteResponse": {
-      "type": "object"
+      "type": "object",
+      "properties": {
+        "backup_dir": {
+          "type": "string"
+        }
+      }
     },
     "internal_models.ServerAccountInfos": {
       "type": "object",
@@ -675,7 +716,7 @@
         "accounts": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/internal_models.Account"
+            "$ref": "#/definitions/internal_models.ServerAccount"
           }
         },
         "failed_info": {
@@ -784,11 +825,11 @@
       "properties": {
         "mem_usage": {
           "description": "MemUsage 总内存使用（比例：如3600MB/8000MB）",
-          "type": "string"
+          "type": "number"
         },
         "user_cpu_usage": {
           "description": "UserProcCPUUsage 记录用户进程的CPU使用率。（总比例）",
-          "type": "string"
+          "type": "number"
         }
       }
     },
@@ -977,7 +1018,7 @@
         },
         "cpu_usage": {
           "description": "CPU利用率。",
-          "type": "string"
+          "type": "number"
         },
         "failed_info": {
           "$ref": "#/definitions/internal_models.ServerInfoLoadingFailedInfo"
@@ -988,7 +1029,7 @@
         },
         "mem_usage": {
           "description": "内存利用率",
-          "type": "string"
+          "type": "number"
         },
         "output": {
           "type": "string"
